# claude-code-from-scratch

./: .env.example  .gitignore  README.md  apply_patch.py  main.py  pyproject.toml
client/: llm_client.py
config/: config.py
context/: compaction.py  manager.py
prompts/: system.py
scripts/: random_forest_training.py
tools/: registry.py
tools/builtin/: read_file.py  todo.py
tools/mcp/: mcp_tool.py
ui/: tui.py
