[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*", "client*", "config*", "context*", "hooks*", "prompts*", "safety*", "tools*", "ui*", "utils*"]

[project]
name = "ai-coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "ddgs>=9.0",
    "fastmcp>=3.0",
    "httpx>=0.27",
    "openai>=2.24.0",
    "platformdirs>=4.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tiktoken>=0.7",
    "tomli>=2.0",
]
